[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["anas <civil.anas1000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.2"
jupyterlab = "^3.1.4"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
